tests/negative/typecheck/unreachable_select.orng
fn main() -> Int {
    unreachable.x
    4
}